[package]
name = "advent-of-code-2021"
version = "0.0.1"
authors = ["Dylan Owen <dyltotheo@gmail.com>"]
edition = "2021"

readme = "Readme.md"
homepage = "https://github.com/dylanowen/advent-of-code-2021"
repository = "https://github.com/dylanowen/advent-of-code-2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
env_logger = "0.7"

regex = "1"
lazy_static = "1.4.0"
#num-traits = "0.2.14"
rand = "0.6.1"
png = "0.15.1"
#permutohedron = "0.2"
#itertools = "0.8.2"
#
## wasm dependencies
#futures = "0.1"
#js-sys = "0.3"
#wasm-bindgen = "0.2.55"
#wasm-bindgen-futures = "0.3"
#console_error_panic_hook = "0.1.5"
#
#[dependencies.web-sys]
#version = "0.3.32"
#features = [
#  'console',
#
#  'HtmlCanvasElement',
#  'CanvasRenderingContext2d',
#  'ImageData',
#]